organized README with tasks, stretch goals, and fixes.  Wrapped article text around image

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,8 @@ nav {
 }
 
 nav ul {
+    display: flex;
+    
     margin: 0;
     padding: 0;
     list-style: none;
@@ -41,6 +43,7 @@ nav a {
 }
 
 .photos {
+    display:flex;
     list-style: none;
     margin: 0;
     padding: 0;
